# examples--system-programming

./: .gitignore
code/: 1.5.2--count-characters-in-input--version-1.c  1.5.2--count-characters-in-input--version-2.c  1.5.3--count-lines-in-input.c  1.5.4--count-lines-words-and-characters-in-input.c  1.6--arrays.c  1.8--arguments--call-by-value.c  CMakeLists.txt  Makefile  copy-input-to-output-using-getchar-and-putchar--version-2.c  copy-input-to-output-using-getchar-and-putchar.c  example-of-get-opt.c  floating-point-conversion-specifier.c  main-with-parameters.c  multiple-print-statements.c  print-fahrenheit-to-celsius-table--using-constants.c  print-fahrenheit-to-celsius-table-using-floats.c  print-fahrenheit-to-celsius-table-using-integers.c  print-fahrenheit-to-celsius-table.c  report-value-of-eof.c  return-zero.c  smallest-c-program.c
code/chapter-01/: 1.5.2--count-characters-in-input--version-1.c  1.5.2--count-characters-in-input--version-2.c  1.7--functions.c  1.9--character-arrays.c
code/libs/: colors.h
code/makefile-template/: Makefile
code/memory-allocation/: basic-malloc-example--array--2.c  basic-malloc-example--array.c  basic-malloc-example.c  strings-with-pointers.c
code/system-calls/handling-system-call-errors/: basic-system-call-error-handling.c
code/working-with-files/: open-a-file.c  remove-a-file-or-folder.c  rename-a-file-or-folder.c
code/working-with-pointers/: array-of-pointers.c  bubble-sort-using-pass-by-reference.c  command-line-arguments.c  double-indirection--pointer-to-pointer.c  first-arrays-and-pointers-example.c  first-pointer-example.c  pass-by-reference.c  pass-by-value.c  pointer-precedence.c  pointer-to-function.c  second-pointer-example.c  swap-by-reference.c
slides/: index.md
(+4 files in other folders)
